updated latest changes

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Unleash Your Style: Transform Your Space with Stunning Interior Design & Unique Wall Posters! Experience Nestsync's Innovation Today">
-    <title>Nestsync | Home &#8211;  &amp; </title>
+    <title>Nestsync | Contact &#8211;  &amp; </title>
 
     <link rel='stylesheet' href='css/block.min.css' type='text/css' media='all' />
     <link rel='stylesheet' href='plugins/goodlayers-core/plugins/combine/style.css' type='text/css' media='all' />
@@ -86,7 +86,7 @@
                                         <li class="menu-item menu-item-home current-menu-item menu-item-has-children inteco-normal-menu"><a href="./" class="sf-with-ul-pre">Home</a>
                                            
                                         </li>
-                                        <li class="menu-item menu-item-has-children inteco-normal-menu"><a href="about-us.html" class="sf-with-ul-pre">About</a>
+                                        <li class="menu-item menu-item-has-children inteco-normal-menu"><a href="about.html" class="sf-with-ul-pre">About</a>
                                            
                                         </li>
                                         <li class="menu-item menu-item-has-children inteco-normal-menu"><a href="service.html" class="sf-with-ul-pre">Services</a>
@@ -118,7 +118,7 @@
                 <div class="gdlr-core-page-builder-body">
                     <div class="gdlr-core-pbf-wrapper " style="padding: 360px 0px 180px 0px;" id="gdlr-core-wrapper-1">
                         <div class="gdlr-core-pbf-background-wrap">
-                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-image: url(upload/image-bg-4.jpg) ;background-size: cover ;background-position: center ;" data-parallax-speed="0.3"></div>
+                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-image: url(upload/home/contact-us.png) ;background-size: cover ;background-position: center ;" data-parallax-speed="0.3"></div>
                         </div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js " data-gdlr-animation="fadeInUp" data-gdlr-animation-duration="600ms" data-gdlr-animation-offset="0.8">
                             <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
@@ -136,13 +136,13 @@
                                 <div class="gdlr-core-pbf-column gdlr-core-column-15 gdlr-core-column-first" data-skin="White Text">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js " style="padding: 80px 65px 80px 65px;" data-sync-height="height-1" data-sync-height-center>
                                         <div class="gdlr-core-pbf-background-wrap" style="background-color: #262626 ;">
-                                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-image: url(upload/image-bg-3.jpg) ;opacity: 0.8 ;background-size: cover ;background-position: center ;" data-parallax-speed="0"></div>
+                                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-image: url(upload/home/locations.png) ;opacity: 0.3 ;background-size: cover ;background-position: center ;" data-parallax-speed="0"></div>
                                         </div>
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js  gdlr-core-sync-height-content" data-gdlr-animation="fadeInDown" data-gdlr-animation-duration="600ms" data-gdlr-animation-offset="0.8">
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 15px ;">
                                                     <div class="gdlr-core-title-item-title-wrap ">
-                                                        <h5 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 28px ;letter-spacing: 0px ;text-transform: none ;">London</h5></div>
+                                                        <h5 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 28px ;letter-spacing: 0px ;text-transform: none ;">Hyderabad</h5></div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
@@ -155,9 +155,9 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="padding-bottom: 0px ;">
                                                     <div class="gdlr-core-text-box-item-content" style="font-size: 16px ;">
-                                                        <p>4 apt. Flawing Street. The Grand Avenue. Liverpool, UK 33342</p>
-                                                        <p>Tel : +44-20-2355-3456
-                                                            <br /> Email : London@InfiniteWP.com</p>
+                                                        <p>Near nagole metro station,Uppal, hyderabad-500039.</p>
+                                                        <p>Tel : +91 9059352362
+                                                            <br /> Email : info@nestsync.in</p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -184,8 +184,8 @@
                                 </div>
                                 <div class="gdlr-core-pbf-column gdlr-core-column-15" data-skin="White Text">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js " style="padding: 80px 65px 80px 65px;" data-sync-height="height-1" data-sync-height-center>
-                                        <div class="gdlr-core-pbf-background-wrap" style="background-color: #0a0a0a ;">
-                                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-image: url(upload/image-bg-5.jpg) ;opacity: 0.8 ;background-size: cover ;background-position: center ;" data-parallax-speed="0"></div>
+                                        <div class="gdlr-core-pbf-background-wrap" style="background-color:#262626;">
+                                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-image: url(upload/home/locations.png) ;opacity: 0.3;background-size: cover ;background-position: center ;" data-parallax-speed="0"></div>
                                         </div>
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js  gdlr-core-sync-height-content" data-gdlr-animation="fadeInUp" data-gdlr-animation-duration="600ms" data-gdlr-animation-offset="0.8">
                                             <div class="gdlr-core-pbf-element">
@@ -204,10 +204,10 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="padding-bottom: 0px ;">
                                                     <div class="gdlr-core-text-box-item-content" style="font-size: 16px ;text-transform: none ;">
-                                                        <p>88 Flower Avenue. Kingdom St.
-                                                            <br />New York 7689</p>
-                                                        <p>Tel : +1-4533-4435-2
-                                                            <br />Email : Sanfran@InfiniteWP.com</p>
+                                                        <p>Sri sai surya towers, Kushibhavan road, Near VVC complex,
+                                                            <br /> opp Croma Khammam, Telangana- 507002</p>
+                                                        <p>Tel :+91 9059352362
+                                                            <br />Email : info@nestsync.in</p>
                                                     </div>
                                                 </div>
                                             </div>
