--- a/about.html
+++ b/about.html
@@ -145,8 +145,8 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">
                                                     <div class="gdlr-core-text-box-item-content" style="font-size: 18px ;font-weight: 400 ;text-transform: none ;">
-                                                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
-                                                        <p><span style="color: #b6958e;">I am alone, and feel the charm of existence in this spot</span>, which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents. I should be incapable of drawing a single stroke at the present moment; and yet I feel that I never was a greater artist than now. When, while the lovely valley. I feel that I never was a greater artist than now. When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                                                        <p>In the bustling world of smart home automation, where convenience meets innovation, there lies a company dedicated to transforming living spaces into havens of comfort and style. Founded in 2021, our journey began with a vision to revolutionize everyday living through cutting-edge automation technology. Today, we proudly stand at the forefront of the automation industry, consistently delivering seamless and efficient solutions to our clients across India and beyond.</p>
+                                                       <p>At the heart of our company is a deep-rooted vision to enhance the way people interact with their homes. We recognized the potential of automation technology to simplify tasks, enhance security, and elevate aesthetics. With this vision in mind, we embarked on our journey to create smart home solutions that cater to the diverse needs of modern living.</p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -156,15 +156,15 @@
                                 <div class="gdlr-core-pbf-column gdlr-core-column-30" id="gdlr-core-column-2">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js " style="margin: 0px 0px 0px 70px;padding: 84px 0px 45px 0px;" data-sync-height="height-1">
                                         <div class="gdlr-core-pbf-background-wrap">
-                                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-image: url(upload/hp-1-chair-bg-4-1-1.jpg) ;background-repeat: no-repeat ;background-position: center left ;" data-parallax-speed="0.08"></div>
+                                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-image: url(upload/home/our-story.png) ;background-repeat: no-repeat ;background-position: center left ;" data-parallax-speed="0.08"></div>
                                         </div>
-                                        <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js  gdlr-core-sync-height-content">
+                                        <!-- <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js  gdlr-core-sync-height-content">
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-image-item gdlr-core-item-pdlr gdlr-core-item-pdb  gdlr-core-center-align">
                                                     <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-rectangle" style="border-width: 0px;max-width: 430px ;"><img src="upload/hp-1-chair-1.jpg" alt="" width="620" height="777" title="hp-1-chair" /></div>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
@@ -196,7 +196,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">
                                                     <div class="gdlr-core-text-box-item-content" style="font-size: 18px ;font-weight: 400 ;text-transform: none ;">
-                                                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. <span style="color: #b6958e;">I am alone, and feel the charm of existence in this spot</span>, which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents. I should be incapable of drawing a single stroke at the present moment; and yet I feel that I never was a greater.</p>
+                                                        <p>At Nestsync, we're proud to have assembled a team of dedicated professionals who are passionate about transforming ordinary living spaces into extraordinary homes. Our team is the backbone of our company, and each member plays a vital role in ensuring that we deliver the highest quality products and services to our customers.</p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -288,7 +288,7 @@
                                 <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-column-first">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js  gdlr-core-column-extend-left" data-sync-height="height1">
                                         <div class="gdlr-core-pbf-background-wrap">
-                                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-image: url(upload/gdtography-310706-unsplash.jpg) ;background-size: cover ;background-position: center ;" data-parallax-speed="0.2"></div>
+                                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-image: url(upload/home/whychoose-three\ \(2\).png) ;background-size: cover ;background-position: center ;" data-parallax-speed="0.2"></div>
                                         </div>
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js  gdlr-core-sync-height-content"></div>
                                     </div>
