--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                         <li class="menu-item menu-item-home current-menu-item "><a href="index.html">Home</a>
                                             
                                         </li>
-                                        <li class="menu-item "><a href="about-us.html">About</a>
+                                        <li class="menu-item "><a href="about.html">About</a>
                                             
                                         </li>
                                         <li class="menu-item "><a href="services.html">Services</a>
@@ -700,7 +700,7 @@
                                                         <div class="gdlr-core-product-grid-content-wrap">
                                                             <div class="gdlr-core-product-grid-content">
                                                                 <h3 class="gdlr-core-product-title gdlr-core-skin-title"><a href="../product/the-little-tree/index.html" >Smart Plugs & Sensors</a></h3>
-                                                                <div class="gdlr-core-product-price gdlr-core-title-font"><del><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>60.00</span></del> <ins><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>49.00</span></ins></div>
+                                                                <div class="gdlr-core-product-price gdlr-core-title-font"><del><span class="woocommerce-Price-amount amount"></span></del> <ins><span class="woocommerce-Price-amount amount"></span></ins></div>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -713,7 +713,7 @@
                                                         <div class="gdlr-core-product-grid-content-wrap">
                                                             <div class="gdlr-core-product-grid-content">
                                                                 <h3 class="gdlr-core-product-title gdlr-core-skin-title"><a href="#" >Smart Curtains Control</a></h3>
-                                                                <div class="gdlr-core-product-price gdlr-core-title-font"><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>50.00</span>
+                                                                <div class="gdlr-core-product-price gdlr-core-title-font"><span class="woocommerce-Price-amount amount"></span>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -727,7 +727,7 @@
                                                         <div class="gdlr-core-product-grid-content-wrap">
                                                             <div class="gdlr-core-product-grid-content">
                                                                 <h3 class="gdlr-core-product-title gdlr-core-skin-title"><a href="../product/wooden-toy-car/index.html" >Customisable wallpapers</a></h3>
-                                                                <div class="gdlr-core-product-price gdlr-core-title-font"><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>70.00</span>
+                                                                <div class="gdlr-core-product-price gdlr-core-title-font"><span class="woocommerce-Price-amount amount"></span>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -741,7 +741,7 @@
                                                         <div class="gdlr-core-product-grid-content-wrap">
                                                             <div class="gdlr-core-product-grid-content">
                                                                 <h3 class="gdlr-core-product-title gdlr-core-skin-title"><a href="../product/mechanic-tool/index.html" >Home Add-on Module</a></h3>
-                                                                <div class="gdlr-core-product-price gdlr-core-title-font"><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>23.00</span>
+                                                                <div class="gdlr-core-product-price gdlr-core-title-font"><span class="woocommerce-Price-amount amount"></span>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -755,7 +755,7 @@
                                                         <div class="gdlr-core-product-grid-content-wrap">
                                                             <div class="gdlr-core-product-grid-content">
                                                                 <h3 class="gdlr-core-product-title gdlr-core-skin-title"><a href="../product/mechanic-tool/index.html" >Smart Touch Switches</a></h3>
-                                                                <div class="gdlr-core-product-price gdlr-core-title-font"><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>23.00</span>
+                                                                <div class="gdlr-core-product-price gdlr-core-title-font"><span class="woocommerce-Price-amount amount"></span>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -769,7 +769,7 @@
                                                         <div class="gdlr-core-product-grid-content-wrap">
                                                             <div class="gdlr-core-product-grid-content">
                                                                 <h3 class="gdlr-core-product-title gdlr-core-skin-title"><a href="../product/mechanic-tool/index.html" >Smart Lighting</a></h3>
-                                                                <div class="gdlr-core-product-price gdlr-core-title-font"><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>23.00</span>
+                                                                <div class="gdlr-core-product-price gdlr-core-title-font"><span class="woocommerce-Price-amount amount"></span>
                                                                 </div>
                                                             </div>
                                                         </div>
