--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-image-item gdlr-core-item-pdlr gdlr-core-item-pdb  gdlr-core-center-align">
-                                                    <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-rectangle" style="border-width: 0px;"><img src="upload/home/Smart touch switches-two.png" alt="" width="700" height="430" title="ruben-garcia-588365-unsplash" /></div>
+                                                    <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-rectangle" style="border-width: 0px;"><img src="upload/home/Smart touch switches.png" alt="" width="700" height="430" title="ruben-garcia-588365-unsplash" /></div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
@@ -384,7 +384,7 @@
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-image-item gdlr-core-item-pdlr gdlr-core-item-pdb  gdlr-core-center-align">
-                                                    <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-rectangle" style="border-width: 0px;"><img src="upload/home/smart Home Add-on Module.png" alt="" width="700" height="430" title="daan-stevens-549933-unsplash" /></div>
+                                                    <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-rectangle" style="border-width: 0px;"><img src="upload/Homepage 6/smart Home Add-on Moduleproduct.png" alt="" width="700" height="430" title="daan-stevens-549933-unsplash" /></div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
@@ -699,7 +699,7 @@
                                                         </div>
                                                         <div class="gdlr-core-product-grid-content-wrap">
                                                             <div class="gdlr-core-product-grid-content">
-                                                                <h3 class="gdlr-core-product-title gdlr-core-skin-title"><a href="../product/the-little-tree/index.html" >Smart Plugs & Sensors</a></h3>
+                                                                <h3 class="gdlr-core-product-title gdlr-core-skin-title"><a href="../product/the-little-tree/index.html" >Smart Plug & Sensor</a></h3>
                                                                 <div class="gdlr-core-product-price gdlr-core-title-font"><del><span class="woocommerce-Price-amount amount"></span></del> <ins><span class="woocommerce-Price-amount amount"></span></ins></div>
                                                             </div>
                                                         </div>
@@ -1589,7 +1589,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 23px ;">
                                                     <div class="gdlr-core-title-item-title-wrap ">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 20px ;letter-spacing: 0px ;text-transform: none ;">Resdiential Address: </h3></div>
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 20px ;letter-spacing: 0px ;text-transform: none ;">Diversi center: </h3></div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
