--- a/index.html
+++ b/index.html
@@ -245,6 +245,20 @@
                             </div>
                         </div>
                     </div>
+                    <div class="gdlr-core-pbf-wrapper " style="padding: 110px 0px 50px 0px;">
+                        <div class="gdlr-core-pbf-background-wrap" style="background-color: #1e1e1e ;"></div>
+                        <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
+                            <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-pbf-wrapper-full-no-space">
+                                <div class="gdlr-core-pbf-element">
+                                    <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-center-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr">
+                                        <div class="gdlr-core-title-item-title-wrap ">
+                                            <a class="gdlr-core-price-table-button gdlr-core-button" href="./contact" target="_self">Visit Our Experience center</a></div>
+                                    </div>
+                                </div>
+                                
+                            </div>
+                        </div>
+                    </div>
                     <div class="gdlr-core-pbf-wrapper " style="padding: 85px 0px 60px 0px;">
                         <div class="gdlr-core-pbf-background-wrap">
                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-color: #f6fafb;" data-parallax-speed="0.1"></div>
