--- a/index.html
+++ b/index.html
@@ -1724,7 +1724,10 @@
             </footer>
         </div>
     </div>
-    
+     <!---whatsapp- integration-->
+     <a href='https://wa.me/+919059352362'  class="whatsapp " target="_blank"> <img src="upload/home/whatsapp-integ-removebg-preview.png" width="60px" height="60px" alt="whatsapp"/></a> 
+
+    <!---whatsapp-integration -end-->
     <script type='text/javascript' src='js/jquery/jquery.js'></script>
     <script type='text/javascript' src='js/jquery/jquery-migrate.min.js'></script>
     <script type='text/javascript' src='plugins/revslider/public/assets/js/jquery.themepunch.tools.min.js'></script>
