--- a/index.html
+++ b/index.html
@@ -1651,10 +1651,10 @@
                                 <h3 class="inteco-widget-title">Services</h3><span class="clear"></span>
                                 <div class="menu-services-container">
                                     <ul id="menu-services" class="menu">
-                                        <li class="menu-item"><a href="#">Architectural Design</a></li>
+                                        <li class="menu-item"><a href="#">Home Automation</a></li>
                                         <li class="menu-item"><a href="#">Interior Design</a></li>
                                         <li class="menu-item"><a href="#">Lighting Design</a></li>
-                                        <li class="menu-item"><a href="#">AutoCAD Service</a></li>
+                                        <li class="menu-item"><a href="#">Customisable wallpapers</a></li>
                                     </ul>
                                 </div>
                             </div>
