--- a/about.html
+++ b/about.html
@@ -371,15 +371,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="gdlr-core-pbf-wrapper " style="margin: 0px 0px 0px 0px;padding: 0px 0px 150px 0px;" id="gdlr-core-wrapper-3">
+                    <div class="gdlr-core-pbf-wrapper " style="padding: 110px 0px 100px 0px;" id="gdlr-core-wrapper-2">
                         <div class="gdlr-core-pbf-background-wrap">
-                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-image: url(upload/about-team-bg-1.jpg) ;background-size: cover ;background-position: center ;" data-parallax-speed="0.2"></div>
+                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-image: url(upload/home/excution.png) ;background-size: cover ;background-position: center ;" data-parallax-speed="0.2"></div>
                         </div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
                             <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
-                                <div class="gdlr-core-pbf-column gdlr-core-column-20 gdlr-core-column-first" id="gdlr-core-column-2">
-                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js " style="margin: -55px 26px 0px 0px;padding: 70px 30px 25px 30px;">
-                                        <div class="gdlr-core-pbf-background-wrap" style="box-shadow: 0 0 40px rgba(10, 10, 10,0.08); -moz-box-shadow: 0 0 40px rgba(10, 10, 10,0.08); -webkit-box-shadow: 0 0 40px rgba(10, 10, 10,0.08); background-color: #ffffff ;"></div>
+                                <div class="gdlr-core-pbf-column gdlr-core-column-20 gdlr-core-column-first" id="gdlr-core-column-5">
+                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js " style="margin: 0px 26px 0px 0px;padding: 70px 30px 25px 30px;">
+                                        <div class="gdlr-core-pbf-background-wrap" style="background-color: #ffffff ;"></div>
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr" style="padding-bottom: 7px ;">
@@ -407,9 +407,9 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="gdlr-core-pbf-column gdlr-core-column-20" id="gdlr-core-column-3">
-                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js " style="margin: -55px 13px 0px 13px;padding: 70px 30px 25px 30px;">
-                                        <div class="gdlr-core-pbf-background-wrap" style="box-shadow: 0 0 40px rgba(10, 10, 10,0.08); -moz-box-shadow: 0 0 40px rgba(10, 10, 10,0.08); -webkit-box-shadow: 0 0 40px rgba(10, 10, 10,0.08); background-color: #ffffff ;"></div>
+                                <div class="gdlr-core-pbf-column gdlr-core-column-20" id="gdlr-core-column-6">
+                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js " style="margin: 0px 13px 0px 13px;padding: 70px 30px 25px 30px;">
+                                        <div class="gdlr-core-pbf-background-wrap" style="background-color: #ffffff ;"></div>
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr" style="padding-bottom: 7px ;">
@@ -437,9 +437,9 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="gdlr-core-pbf-column gdlr-core-column-20" id="gdlr-core-column-4">
-                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js " style="margin: -55px 0px 0px 26px;padding: 70px 30px 25px 30px;">
-                                        <div class="gdlr-core-pbf-background-wrap" style="box-shadow: 0 0 40px rgba(10, 10, 10,0.08); -moz-box-shadow: 0 0 40px rgba(10, 10, 10,0.08); -webkit-box-shadow: 0 0 40px rgba(10, 10, 10,0.08); background-color: #ffffff ;"></div>
+                                <div class="gdlr-core-pbf-column gdlr-core-column-20" id="gdlr-core-column-7">
+                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js " style="margin: 0px 0px 0px 26px;padding: 70px 30px 25px 30px;">
+                                        <div class="gdlr-core-pbf-background-wrap" style="background-color: #ffffff ;"></div>
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr" style="padding-bottom: 7px ;">
@@ -470,42 +470,71 @@
                             </div>
                         </div>
                     </div>
-                    <div class="gdlr-core-pbf-wrapper " style="margin: -110px 0px 0px 0px;padding: 0px 0px 90px 0px;" id="gdlr-core-wrapper-4">
-                        <div class="gdlr-core-pbf-background-wrap"></div>
-                        <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
-                            <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
-                                <div class="gdlr-core-pbf-column gdlr-core-column-60 gdlr-core-column-first">
-                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js " style="margin: 0px 0px 0px 0px;padding: 60px 0px 0px 0px;">
-                                        <div class="gdlr-core-pbf-background-wrap" style="box-shadow: 0 0 45px rgba(10, 10, 10,0.06); -moz-box-shadow: 0 0 45px rgba(10, 10, 10,0.06); -webkit-box-shadow: 0 0 45px rgba(10, 10, 10,0.06); background-color: #ffffff ;"></div>
-                                        <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
-                                            <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-gallery-item gdlr-core-item-pdb clearfix  gdlr-core-gallery-item-style-grid" style="padding-bottom: 25px ;">
-                                                    <div class="gdlr-core-gallery-item-holder gdlr-core-js-2 clearfix" data-layout="fitrows">
-                                                        <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-12 gdlr-core-column-first gdlr-core-item-pdlr gdlr-core-item-mgb">
-                                                            <div class="gdlr-core-gallery-list gdlr-core-media-image">
-                                                                <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/banner-1.png" data-lightbox-group="gdlr-core-img-group-1"><img src="upload/banner-1.png" alt="" width="137" height="103" title="banner-1" /></a>
-                                                            </div>
-                                                        </div>
-                                                        <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-12 gdlr-core-item-pdlr gdlr-core-item-mgb">
-                                                            <div class="gdlr-core-gallery-list gdlr-core-media-image">
-                                                                <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/banner-2.png" data-lightbox-group="gdlr-core-img-group-1"><img src="upload/banner-2.png" alt="" width="137" height="103" title="banner-2" /></a>
-                                                            </div>
-                                                        </div>
-                                                        <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-12 gdlr-core-item-pdlr gdlr-core-item-mgb">
-                                                            <div class="gdlr-core-gallery-list gdlr-core-media-image">
-                                                                <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/banner-3.png" data-lightbox-group="gdlr-core-img-group-1"><img src="upload/banner-3.png" alt="" width="137" height="103" title="banner-3" /></a>
-                                                            </div>
-                                                        </div>
-                                                        <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-12 gdlr-core-item-pdlr gdlr-core-item-mgb">
-                                                            <div class="gdlr-core-gallery-list gdlr-core-media-image">
-                                                                <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/banner-4.png" data-lightbox-group="gdlr-core-img-group-1"><img src="upload/banner-4.png" alt="" width="137" height="103" title="banner-4" /></a>
-                                                            </div>
-                                                        </div>
-                                                        <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-12 gdlr-core-item-pdlr gdlr-core-item-mgb">
-                                                            <div class="gdlr-core-gallery-list gdlr-core-media-image">
-                                                                <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/banner-5.png" data-lightbox-group="gdlr-core-img-group-1"><img src="upload/banner-5.png" alt="" width="137" height="103" title="banner-5" /></a>
-                                                            </div>
-                                                        </div>
+                   
+                </div>
+            </div>
+            <div class="gdlr-core-pbf-wrapper " style="padding: 100px 0px 60px 0px;">
+                <div class="gdlr-core-pbf-background-wrap" style="background-color: #ffffff ;"></div>
+                <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
+                    <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-pbf-wrapper-full-no-space">
+                        <div class="gdlr-core-pbf-element">
+                            <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-center-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr">
+                                <div class="gdlr-core-title-item-title-wrap ">
+                                    <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 34px ;letter-spacing: 0px ;text-transform: none ;color: #111111 ;">Site & installation</h3></div>
+                            </div>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+            <div class="gdlr-core-pbf-wrapper " style="padding: 0px 0px 0px 0px;">
+                <div class="gdlr-core-pbf-background-wrap"></div>
+                <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
+                    <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-pbf-wrapper-full-no-space">
+                        <div class="gdlr-core-pbf-column gdlr-core-column-60 gdlr-core-column-first">
+                            <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
+                                <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
+                                    <div class="gdlr-core-pbf-element">
+                                        <div class="gdlr-core-gallery-item gdlr-core-item-pdb clearfix  gdlr-core-gallery-item-style-grid-no-space gdlr-core-item-pdlr " style="padding-bottom: 0px ;">
+                                            <div class="gdlr-core-gallery-item-holder gdlr-core-js-2 clearfix" data-layout="fitrows">
+                                                <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-15 gdlr-core-column-first">
+                                                    <div class="gdlr-core-gallery-list gdlr-core-media-image">
+                                                        <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/samuel-zeller-28772-unsplash.jpg" data-lightbox-group="gdlr-core-img-group-1"><img src="upload/home/site-works.png" alt="" width="700" height="660" title="samuel-zeller-28772-unsplash" /></a>
+                                                    </div>
+                                                </div>
+                                                <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-15">
+                                                    <div class="gdlr-core-gallery-list gdlr-core-media-image">
+                                                        <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/coline-beulin-603726-unsplash.jpg" data-sub-html="Orange Skyscraper" data-lightbox-group="gdlr-core-img-group-1"><img src="upload/home/site-works-two.png" alt="" width="700" height="660" title="Image Title" /></a>
+                                                    </div>
+                                                </div>
+                                                <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-15">
+                                                    <div class="gdlr-core-gallery-list gdlr-core-media-image">
+                                                        <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/etienne-beauregard-riverin-48305-unsplash.jpg" data-sub-html="Modern House" data-lightbox-group="gdlr-core-img-group-1"><img src="upload/home/site-works-three.png" alt="" width="700" height="660" title="Image Title" /></a>
+                                                    </div>
+                                                </div>
+                                                <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-15">
+                                                    <div class="gdlr-core-gallery-list gdlr-core-media-image">
+                                                        <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/home/site-works.png" data-lightbox-group="gdlr-core-img-group-1"><img src="upload/home/site-works-four.png" alt="" width="700" height="660" title="oleg-laptev-546619-unsplash" /></a>
+                                                    </div>
+                                                </div>
+                                                <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-15 gdlr-core-column-first">
+                                                    <div class="gdlr-core-gallery-list gdlr-core-media-image">
+                                                        <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/home/site-works-two.png" data-sub-html="Wooden Building" data-lightbox-group="gdlr-core-img-group-1"><img src="upload/home/site-works-five.png" alt="" width="700" height="660" title="Image Title" /></a>
+                                                    </div>
+                                                </div>
+                                                <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-15">
+                                                    <div class="gdlr-core-gallery-list gdlr-core-media-image">
+                                                        <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/home/site-works-three.png" data-lightbox-group="gdlr-core-img-group-1"><img src="upload/home/site-works-six.png" alt="" width="700" height="660" title="simone-hutsch-616164-unsplash" /></a>
+                                                    </div>
+                                                </div>
+                                                <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-15">
+                                                    <div class="gdlr-core-gallery-list gdlr-core-media-image">
+                                                        <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/home/site-works-four.png" data-lightbox-group="gdlr-core-img-group-1"><img src="upload/home/site-works-seven.png" alt="" width="700" height="660" title="joel-filipe-151690-unsplash" /></a>
+                                                    </div>
+                                                </div>
+                                                <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-15">
+                                                    <div class="gdlr-core-gallery-list gdlr-core-media-image">
+                                                        <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/home/site-works-five.png" data-lightbox-group="gdlr-core-img-group-1"><img src="upload/home/site-works-one.png" alt="" width="700" height="660" title="robin-spielmann-588423-unsplash" /></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -517,8 +546,6 @@
                     </div>
                 </div>
             </div>
-
-
             <footer>
                 <div class="inteco-footer-wrapper ">
                     <div class="inteco-footer-container inteco-container clearfix">
@@ -537,10 +564,10 @@
                                 <h3 class="inteco-widget-title">Services</h3><span class="clear"></span>
                                 <div class="menu-services-container">
                                     <ul id="menu-services" class="menu">
-                                        <li class="menu-item"><a href="#">Architectural Design</a></li>
+                                        <li class="menu-item"><a href="#">Home Automation</a></li>
                                         <li class="menu-item"><a href="#">Interior Design</a></li>
                                         <li class="menu-item"><a href="#">Lighting Design</a></li>
-                                        <li class="menu-item"><a href="#">AutoCAD Service</a></li>
+                                        <li class="menu-item"><a href="#">Customisable wallpapers</a></li>
                                     </ul>
                                 </div>
                             </div>
