--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Unleash Your Style: Transform Your Space with Stunning Interior Design & Unique Wall Posters! Experience Nestsync's Innovation Today">
-    <title>Nestsync | Home &#8211;  &amp; </title>
+    <title>Nestsync | Home  </title>
 
     <link rel='stylesheet' href='css/block.min.css' type='text/css' media='all' />
     <link rel='stylesheet' href='plugins/goodlayers-core/plugins/combine/style.css' type='text/css' media='all' />
@@ -26,7 +26,7 @@
             <div class="inteco-mobile-header-container inteco-container clearfix">
                 <div class="inteco-logo  inteco-item-pdlr">
                     <div class="inteco-logo-inner">
-                        <a class="" href="index.html"><img src="upload/home/ok.png" alt="" style="max-width: 200px;"   height="25" title="logo" /></a>
+                        <a class="" href="index.html"><img src="upload/home/main-logo.png" alt="" style="max-width: 200px;"   height="25" title="logo" /></a>
                     </div>
                 </div>
                 <div class="inteco-mobile-menu-right">
@@ -150,7 +150,7 @@
                             <div class="inteco-logo  inteco-item-pdlr">
                                 <div class="inteco-logo-inner">
                                     <a class="" href="index.html">
-                                        <img src="upload/home/ok.png" alt="" style="max-width:200px;" height="25" title="logo-dark" />
+                                        <img src="upload/home/main-logo.png" alt="" style="max-width:200px;" height="25" title="logo-dark" />
                                     </a>
                                 </div>
                             </div>
@@ -1207,8 +1207,8 @@
                                                             <div class="gdlr-core-testimonial-author-wrap clearfix">
                                                                 <div class="gdlr-core-testimonial-author-image gdlr-core-media-image"><img src="upload/personnel-2-2-150x150.jpg" alt="" width="150" height="150" title="personnel-2-2" /></div>
                                                                 <div class="gdlr-core-testimonial-author-content">
-                                                                    <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #ffffff ;">Jane Smith</div>
-                                                                    <div class="gdlr-core-testimonial-position gdlr-core-info-font gdlr-core-skin-caption" style="color: #ffffff ;">CEO, InDesign</div>
+                                                                    <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #ffffff ;">Mahender Alimi</div>
+                                                                    <div class="gdlr-core-testimonial-position gdlr-core-info-font gdlr-core-skin-caption" style="color: #ffffff ;">Managing Directior</div>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -1558,7 +1558,7 @@
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-social-network-item gdlr-core-item-pdb  gdlr-core-left-align gdlr-core-item-pdlr" style="padding-bottom: 47px ;"><a href="#" target="_blank" class="gdlr-core-social-network-icon" title="facebook" style="font-size: 19px ;color: #A0C6B7;"><i class="fa fa-facebook" ></i></a><a href="#" target="_blank" class="gdlr-core-social-network-icon" title="google-plus" style="font-size: 19px ;color: #A0C6B7 ;margin-left: 21px ;"><i class="fa fa-instagram" ></i></a><a href="#" target="_blank" class="gdlr-core-social-network-icon" title="linkedin" style="font-size: 19px ;color: #A0C6B7 ;margin-left: 21px ;"><i class="fa fa-linkedin" ></i></a><a href="#" target="_blank" class="gdlr-core-social-network-icon" title="twitter" style="font-size: 19px ;color: #A0C6B7 ;margin-left: 21px ;"><i class="fa fa-twitter" ></i></a></div>
+                                                <div class="gdlr-core-social-network-item gdlr-core-item-pdb  gdlr-core-left-align gdlr-core-item-pdlr" style="padding-bottom: 47px ;"><a href="https://www.facebook.com/profile.php?id=61556636043284&mibextid=ZbWKwL" target="_blank" class="gdlr-core-social-network-icon" title="facebook" style="font-size: 19px ;color: #A0C6B7;"><i class="fa fa-facebook" ></i></a><a href="https://www.instagram.com/nestsync_homeautomation.intr?igsh=MW1maXJ2ZGE1Z2lyZQ==" target="_blank" class="gdlr-core-social-network-icon" title="google-plus" style="font-size: 19px ;color: #A0C6B7 ;margin-left: 21px ;"><i class="fa fa-instagram" ></i></a><a href="#" target="_blank" class="gdlr-core-social-network-icon" title="linkedin" style="font-size: 19px ;color: #A0C6B7 ;margin-left: 21px ;"><i class="fa fa-linkedin" ></i></a><a href="#" target="_blank" class="gdlr-core-social-network-icon" title="twitter" style="font-size: 19px ;color: #A0C6B7 ;margin-left: 21px ;"><i class="fa fa-twitter" ></i></a></div>
                                             </div>
                                         </div>
                                     </div>
@@ -1639,7 +1639,7 @@
                         <div class="inteco-footer-column inteco-item-pdlr inteco-column-15">
                             <div id="text-1" class="widget widget_text inteco-widget">
                                 <div class="textwidget">
-                                    <p><img class="alignnone size-full wp-image-5803" src="upload/home/ok.png" alt="" style="max-width: 200px;" height="24" />
+                                    <p><img class="alignnone size-full wp-image-5803" src="upload/home/main-logo.png" alt="" style="max-width: 200px;" height="24" />
                                         <br />
                                         <span class="gdlr-core-space-shortcode" style="margin-top: -27px ;"></span>
                                         <br /> A wonderful serenity has taken possession of my entire soul, like these sweet morn ings of spring which I enjoy with my whole heart of me.</p>
@@ -1703,7 +1703,7 @@
                     <div class="inteco-copyright-container inteco-container clearfix">
                         
 						<div class="inteco-copyright-left inteco-item-pdlr">
-							<a href="#" target="_blank">
+							<a href="https://www.facebook.com/profile.php?id=61556636043284&mibextid=ZbWKwL" target="_blank">
 								<i class="fa fa-facebook" style="font-size: 17px ;color: #A0C6B7 ;margin-right: 12px ;"  ></i>
 							</a>
 							<a href="#" target="_blank">
@@ -1725,7 +1725,7 @@
         </div>
     </div>
      <!---whatsapp- integration-->
-     <a href='https://wa.me/+919059352362'  class="whatsapp " target="_blank"> <img src="upload/home/whatsapp-integ-removebg-preview.png" width="60px" height="60px" alt="whatsapp"/></a> 
+     <a href='https://wa.me/message/RYCGC6YAF4TMP1'  class="whatsapp " target="_blank"> <img src="upload/home/whatsapp-integ-removebg-preview.png" width="60px" height="60px" alt="whatsapp"/></a> 
 
     <!---whatsapp-integration -end-->
     <script type='text/javascript' src='js/jquery/jquery.js'></script>
