--- a/contact.html
+++ b/contact.html
@@ -381,7 +381,7 @@
                     <div class="inteco-copyright-container inteco-container clearfix">
                         
 						<div class="inteco-copyright-left inteco-item-pdlr">
-							<a href="#" target="_blank">
+							<a href="https://www.facebook.com/profile.php?id=61556636043284&mibextid=ZbWKwL" target="_blank">
 								<i class="fa fa-facebook" style="font-size: 17px ;color: #A0C6B7 ;margin-right: 12px ;"  ></i>
 							</a>
 							<a href="#" target="_blank">
@@ -390,7 +390,7 @@
 							<a href="#" target="_blank">
 								<i class="fa fa-linkedin" style="font-size: 17px ;color: #A0C6B7 ;margin-right: 12px ;"  ></i>
 							</a>
-							<a href="#" target="_blank">
+							<a href="https://www.instagram.com/nestsync_homeautomation.intr?igsh=MW1maXJ2ZGE1Z2lyZQ==" target="_blank">
 								<i class="fa fa-instagram" style="font-size: 17px ;color: #A0C6B7 ;margin-right: 12px ;"  ></i>
 							</a>
 							
