--- a/index.html
+++ b/index.html
@@ -1712,7 +1712,7 @@
 							<a href="#" target="_blank">
 								<i class="fa fa-linkedin" style="font-size: 17px ;color: #A0C6B7 ;margin-right: 12px ;"  ></i>
 							</a>
-							<a href="#" target="_blank">
+							<a href="https://www.instagram.com/nestsync_homeautomation.intr?igsh=MW1maXJ2ZGE1Z2lyZQ==" target="_blank">
 								<i class="fa fa-instagram" style="font-size: 17px ;color: #A0C6B7 ;margin-right: 12px ;"  ></i>
 							</a>
 							
